--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,6 +42,7 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -55,4 +56,10 @@ android {
 
 flutter {
     source = "../.."
+}
+
+apply plugin: 'com.google.gms.google-services'
+
+dependencies {
+    implementation 'com.android.support:multidex:1.0.3'
 }
