--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.0
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  cloud_firestore: ^5.0.1
 
 dev_dependencies:
   flutter_test:
