--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
   cloud_firestore: ^5.0.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
