--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   equatable: ^2.0.5
   cloud_firestore: ^5.0.1
   image_picker: ^1.1.2
+  firebase_storage: ^12.0.1
 
 dev_dependencies:
   flutter_test:
